2008-12-30  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/screenshot/totem-screenshot-plugin.c (impl_activate):
	Change the gallery menu entry from "Take Gallery" to "Create Gallery",
	and removed the duplicate icon. (Closes: #565917)

2008-12-28  Philip Withnall  <philip@tecnocode.co.uk>

	Update svn:ignore properties.

2008-12-27  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* data/totem.ui:
	* src/Makefile.am:
	* src/plugins/screenshot/Makefile.am:
	* src/plugins/screenshot/gallery.ui:
	* src/plugins/screenshot/screenshot.totem-plugin.in:
	* src/plugins/screenshot/totem-gallery-progress.c
	(totem_gallery_progress_class_init), (totem_gallery_progress_init),
	(totem_gallery_progress_finalize), (totem_gallery_progress_new),
	(dialog_response_callback), (process_line), (stdout_watch_cb),
	(totem_gallery_progress_run):
	* src/plugins/screenshot/totem-gallery-progress.h:
	* src/plugins/screenshot/totem-gallery.c
	(totem_gallery_class_init), (totem_gallery_init),
	(totem_gallery_new), (default_screenshot_count_toggled_callback),
	(dialog_response_callback):
	* src/plugins/screenshot/totem-gallery.h:
	* src/plugins/screenshot/totem-screenshot-plugin.c
	(totem_screenshot_plugin_class_init),
	(totem_screenshot_plugin_init), (take_screenshot_action_cb),
	(take_gallery_action_cb), (window_key_press_event_cb),
	(update_state), (got_metadata_cb), (notify_logo_mode_cb),
	(disable_save_to_disk_changed_cb), (impl_activate),
	(impl_deactivate), (make_filename_for_dir),
	(totem_screenshot_plugin_setup_file_chooser),
	(totem_screenshot_plugin_update_file_chooser):
	* src/plugins/screenshot/totem-screenshot-plugin.h:
	* src/plugins/screenshot/totem-screenshot.c
	(totem_screenshot_response), (totem_screenshot_init),
	(totem_screenshot_new):
	* src/plugins/screenshot/totem-screenshot.h:
	* src/totem-menu.c:
	* src/totem-preferences.c (totem_setup_preferences):
	* src/totem-private.h:
	* src/totem-screenshot.c:
	* src/totem-screenshot.h: