@@ -5,7 +5,7 @@
 		<property name="lower">1</property>
 		<property name="page-increment">10</property>
 		<property name="step-increment">1</property>
-		<property name="page-size">10</property>
+		<property name="page-size">0</property>
 		<property name="value">1</property>
 	</object>
 	<object class="GtkAdjustment" id="screenshot_width_adjustment">
@@ -13,7 +13,7 @@
 		<property name="lower">20</property>
 		<property name="page-increment">10</property>
 		<property name="step-increment">1</property>
-		<property name="page-size">10</property>
+		<property name="page-size">0</property>
 		<property name="value">128</property>
 	</object>
 	<object class="GtkVBox" id="gallery_dialog_content">
@@ -39,7 +39,7 @@
 				<child>
 					<object class="GtkLabel" id="label2">
 						<property name="xalign">1</property>
-						<property name="label" translatable="yes">Screenshot width:</property>
+						<property name="label" translatable="yes">Screenshot width (in pixels):</property>
 					</object>
 					<packing>
 						<property name="top-attach">1</property>
