@@ -1,3 +1,8 @@
+2009-01-03  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plugins/screenshot/gallery.ui: Avoid warnings
+	at run-time, better string for the thumbnail width
+
 2008-12-30  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/screenshot/totem-screenshot-plugin.c (impl_activate):
